# p2p-db

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/src/: kv.rs  main.rs  utils.rs
server/src/structs/: message.rs  node.rs
src/: main.rs
src/structs/: mod.rs
